@@ -5,6 +5,13 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 ##################################################################
 
+opsi-winst/opsi-script (4.12.0.4) stable; urgency=low
+
+  * osconf: readConfigFromService: protect from wrong data types from service
+
+-- Detlef Oertel <d.oertel@uib.de>  Mon, 04 Sep 2017:15:00:00 +0200
+
+
 opsi-winst/opsi-script (4.12.0.3) stable; urgency=low
 
   * global: rising the level of a lot of loging
